# mongory-core

./: .clang-format  .gitignore  CMAKE_USAGE.md  CMakeLists.txt  Doxyfile  MIGRATION.md  Makefile  README.md  build.sh  test_mongory
.github/workflows/: cmake-multi-platform.yml
benchmarks/: basic_test.c
include/: mongory-core.h
include/mongory-core/: internal.h
include/mongory-core/foundations/: array.h  config.h  error.h  iterable.h  memory_pool.h  table.h  value.h
include/mongory-core/matchers/: base_matcher.h  matcher.h
scripts/: setup_unity.sh
src/: array.c  array.h  memory_pool.c  private.h  table.c  table.h  value.c  value.h
src/foundations/: array.c  array_private.h  config.c  config_private.h  error.c  functional_match.c  functional_match.h  iterable.c  iterable.h  memory_pool.c  string_buffer.c  string_buffer.h  table.c  utils.c  utils.h  value.c
src/internal/: iterable.c
src/matchers/: array_record_matcher.c  array_record_matcher.h  base_matcher.c  base_matcher.h  compare_matcher.c  compare_matcher.h  composite_matcher.c  composite_matcher.h  existance_matcher.c  existance_matcher.h  external_matcher.c  external_matcher.h  inclusion_matcher.c  inclusion_matcher.h  literal_matcher.c  literal_matcher.h  matcher.c  matcher_explainable.c  matcher_explainable.h  matcher_traversable.c  matcher_traversable.h  regex_matcher.c  regex_matcher.h
src/test_helper/: test_helper.c  test_helper.h
test/: test_mongory.c
tests/: mongory_and_matcher_test.c  mongory_array_test.c  mongory_compare_matcher_test.c  mongory_config_test.c  mongory_elem_match_matcher_test.c  mongory_every_matcher_test.c  mongory_existance_matcher_test.c  mongory_inclusion_matcher_test.c  mongory_memory_pool_test.c  mongory_or_matcher_test.c  mongory_regex_matcher_test.c  mongory_string_buffer_test.c  mongory_table_cond_matcher_test.c  mongory_table_test.c  mongory_test.c  mongory_value_test.c
tests/jsons/: and_matcher_test.json  elem_match_matcher_test.json  every_matcher_test.json  or_matcher_test.json  table_condition_test.json
